--- a/index.html
+++ b/index.html
@@ -43,5 +43,7 @@
 
     <script src="./main.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <h1>js-email-list</h1>
+  </body>
 </html>
