fine logica mancante trasposizione su lista

--- a/index.html
+++ b/index.html
@@ -42,8 +42,12 @@
     <!-- #### MIO JS #### -->
 
     <script src="./main.js" defer></script>
+    <!-- <script src="./prova.js" defer></script> -->
   </head>
   <body>
     <h1>js-email-list</h1>
+    <div class="container-fluid">
+      <ul id="email-list"></ul>
+    </div>
   </body>
 </html>
